Added error handling and i18n support